--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -15,19 +15,15 @@
         <p class="sold-out-cost">Sold Out</p>
       </div>
 
-      <div class="release">
+      <div class="release not-on-sale">
         <h2>Third Release</h2>
-        <p class="cost">
-          Regular
-          <span>&pound;99</span>
-        </p>
-        <p class="cost">
-          Student
-          <span>&pound;19</span>
-        </p>
-        <%= link_to 'Buy Now', 'https://ti.to/bath-ruby/2016', :class => "btn" %>
+        <p class="sold-out-cost">Sold Out</p>
       </div>
-      
+
+    </div>
+
+    <div class="waiting-list">
+      <%= link_to 'Join the waiting list', 'https://ti.to/bath-ruby/2016', :class => "btn" %>
     </div>
 
     <div id="mc_embed_signup">
