Update Zach's talk title and description

--- a/source/schedule.html.erb
+++ b/source/schedule.html.erb
@@ -180,8 +180,11 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
           <%= link_to "@holman", 'http://twitter.com/holman', :class => "twitter" %>
         </div>
         <div class="detail">
-          <p class="title">I Can Fired and You Can Too!</p>
+          <p class="title">Firing People</p>
           <p class="speaker">Zach Holman</p>
+          <p>
+            People don’t talk about getting fired. We come up with euphemisms: "I’m funemployed!", or "I’m looking for my next journey!" That’s strange, when you think about it, given that it’s a fairly normal event that happens from time to time. But mostly it’s tragic, because unless we start talking about firing and getting fired, we can’t begin to start improving this very real — and often very painful — process.
+          </p>
         </div>
       </li>
 
