Update the information page

--- a/source/information.html.erb
+++ b/source/information.html.erb
@@ -108,7 +108,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
         <h3>By Bike</h3>
 
-        <p>If you’d like to cycle around Bath then you can sign up for<%= link_to "Nextbike", "http://www.nextbike.co.uk/en/bath/" %>. Hiring a Nextbike costs £1 for the first half an hour and they’re available at various locations around the city.</p>
+        <p>If you’d like to cycle around Bath then you can sign up for <%= link_to "Nextbike", "http://www.nextbike.co.uk/en/bath/" %>. Hiring a Nextbike costs £1 for the first half an hour and they’re available at various locations around the city.</p>
         
       </div>
 
@@ -155,8 +155,8 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
         <h3>Coffee</h3>
         <p>
           <%= link_to "Colonna & Smalls", "http://www.colonnaandsmalls.co.uk/" %><br />
-          <%= link_to "Society Café - High St", "http://www.society-cafe.com/" %><br />
-          <%= link_to "Society Café - Kingsmead Sq", "http://www.society-cafe.com/" %><br />
+          <%= link_to "Society Café - High St & Kingsmead Sq", "http://www.society-cafe.com/" %><br />
+          <%= link_to "Picnic Coffee - Saracen St & Burton St", "http://picniccoffee.co.uk" %><br />
           <%= link_to "Mokoko", "http://mokoko.biz/" %><br />
           <%= link_to "The Forum Coffee House", "http://www.bathforum.co.uk/Groups/221224/Bath_Forum/Caf%C3%A9/Caf%C3%A9.aspx" %>
         </p>
@@ -168,7 +168,8 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
           <%= link_to "Hall & Woodhouse", "http://hall-woodhousebath.co.uk/" %><br />
           <%= link_to "The Whole Bagel", "http://www.thewholebagel.co.uk/" %><br />
           <%= link_to "Schwartz Bros Burgers", "http://design407.wix.com/schwartzbrosbath" %><br />
-          <%= link_to "Bonghy-Bo", "http://www.bonghy-bo.co.uk/" %>
+          <%= link_to "Bonghy-Bo", "http://www.bonghy-bo.co.uk/" %><br />
+          <%= link_to "Yak Yeti Yak", "http://www.yakyetiyak.co.uk/index" %> (Great Nepalese food)
         </p>
       </div>
 
@@ -176,9 +177,10 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
         <h3>Drink</h3>
         <p>
           <%= link_to "The West Gate", "http://www.westgate-bath.co.uk/" %><br />
-          <%= link_to "The Raven", "http://www.theravenofbath.co.uk/" %> (pies!)<br />
-          <%= link_to "Graze", "https://www.bathales.com/our-pubs/pid/graze-bath/" %> (close to train)<br />
-          <%= link_to "The Pig and Fiddle", "http://www.pigandfiddle.butcombe.com/" %>
+          <%= link_to "The Raven", "http://www.theravenofbath.co.uk/" %> (Great pies!)<br />
+          <%= link_to "Graze", "https://www.bathales.com/our-pubs/pid/graze-bath/" %> (Close to station)<br />
+          <%= link_to "The Pig and Fiddle", "http://www.pigandfiddle.butcombe.com/" %><br />
+          <%= link_to "The Bell Inn", "http://www.thebellinnbath.co.uk" %>
         </p>
       </div>
       
